      Fix empty table rows in vertical display (kept Mozilla from displaying
      borders in this printmode). Adjusted layout a tiny-weeny bit to let
      the comments of a field fit the whole space.
    * libraries/display_tbl.lib.php3, libraries/transformations/TEMPLATE,
      Documentation.html: Propagate current MIME-type to plugin functions.
      Thanks for noticing (again), Thiemo. :)

2003-11-06 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/export/xml.php3: Add xml header with encoding information
      (bug #836630).

2003-11-05 Garvin Hicking <me@supergarv.de>
    * libraries/common.lib.php3, footer.inc.php3: Bug #831181: Do not
      store queries with errors in history, also when coming from the
      database SQL tab.
    * libraries/common.lib.php3: Bug #835854. The MySQL-error messages
      are now put inside a <code> HTML-container, not <pre>. This allows
      wordwrapping to hide vertical scrollbars. Linebreak/Whitespace
      formatting has been altered to preserve those.
    * libraries/transformations/text_plain__dateformat.inc.php3:
      Remove obsolete code, thanks to Thiemo Maettig!
    * Documentation.html, libraries/display_tbl.lib.php3,
      libraries/transformations/*:
      The $meta field information is now passed to the transformation plugins
      to allow future (and easier) usage of field information
      (zerofill/unsigned/not_null/...).

2003-11-04 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: bug 833900, added known limitation in FAQ 3.10
      about selecting homonyms on a table without primary key

2003-11-04 Garvin Hicking <me@supergarv.de>
    * Documentation.html: Added known limitation about ANSI-mode
      (Bug #816858)
    * libraries/transformations/text_plain__dateformat.inc.php3:
      Bug #835252: Now allow more timestamps. Minor modification of a patch
      submitted by anonymous poster. Thanks!

2003-11-03 Garvin Hicking <me@supergarv.de>